@@ -14,6 +14,7 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.Member;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
+import org.mozilla.javascript.commonjs.module.ModuleScope;
 
 public class FunctionObject extends BaseFunction {
     private static final long serialVersionUID = -5332312783643935019L;
@@ -21,69 +22,64 @@ public class FunctionObject extends BaseFunction {
     /**
      * Create a JavaScript function object from a Java method.
      *
-     * <p>The <code>member</code> argument must be either a java.lang.reflect.Method
-     * or a java.lang.reflect.Constructor and must match one of two forms.<p>
-     * <p>
-     * The first form is a member with zero or more parameters
-     * of the following types: Object, String, boolean, Scriptable,
-     * int, or double. The Long type is not supported
-     * because the double representation of a long (which is the
-     * EMCA-mandated storage type for Numbers) may lose precision.
-     * If the member is a Method, the return value must be void or one
-     * of the types allowed for parameters.<p>
-     * <p>
-     * The runtime will perform appropriate conversions based
-     * upon the type of the parameter. A parameter type of
-     * Object specifies that no conversions are to be done. A parameter
-     * of type String will use Context.toString to convert arguments.
-     * Similarly, parameters of type double, boolean, and Scriptable
-     * will cause Context.toNumber, Context.toBoolean, and
-     * Context.toObject, respectively, to be called.<p>
-     * <p>
-     * If the method is not static, the Java 'this' value will
-     * correspond to the JavaScript 'this' value. Any attempt
-     * to call the function with a 'this' value that is not
-     * of the right Java type will result in an error.<p>
-     * <p>
-     * The second form is the variable arguments (or "varargs")
-     * form. If the FunctionObject will be used as a constructor,
-     * the member must have the following parameters
+     * <p>The <code>member</code> argument must be either a java.lang.reflect.Method or a
+     * java.lang.reflect.Constructor and must match one of two forms.
+     *
+     * <p>The first form is a member with zero or more parameters of the following types: Object,
+     * String, boolean, Scriptable, int, or double. The Long type is not supported because the
+     * double representation of a long (which is the EMCA-mandated storage type for Numbers) may
+     * lose precision. If the member is a Method, the return value must be void or one of the types
+     * allowed for parameters.
+     *
+     * <p>The runtime will perform appropriate conversions based upon the type of the parameter. A
+     * parameter type of Object specifies that no conversions are to be done. A parameter of type
+     * String will use Context.toString to convert arguments. Similarly, parameters of type double,
+     * boolean, and Scriptable will cause Context.toNumber, Context.toBoolean, and Context.toObject,
+     * respectively, to be called.
+     *
+     * <p>If the method is not static, the Java 'this' value will correspond to the JavaScript
+     * 'this' value. Any attempt to call the function with a 'this' value that is not of the right
+     * Java type will result in an error.
+     *
+     * <p>The second form is the variable arguments (or "varargs") form. If the FunctionObject will
+     * be used as a constructor, the member must have the following parameters
+     *
      * <pre>
      *      (Context cx, Object[] args, Function ctorObj,
      *       boolean inNewExpr)</pre>
-     * and if it is a Method, be static and return an Object result.<p>
-     * <p>
-     * Otherwise, if the FunctionObject will <i>not</i> be used to define a
-     * constructor, the member must be a static Method with parameters
+     *
+     * and if it is a Method, be static and return an Object result.
+     *
+     * <p>Otherwise, if the FunctionObject will <i>not</i> be used to define a constructor, the
+     * member must be a static Method with parameters
+     *
      * <pre>
      *      (Context cx, Scriptable thisObj, Object[] args,
      *       Function funObj) </pre>
-     * and an Object result.<p>
-     * <p>
-     * When the function varargs form is called as part of a function call,
-     * the <code>args</code> parameter contains the
-     * arguments, with <code>thisObj</code>
-     * set to the JavaScript 'this' value. <code>funObj</code>
-     * is the function object for the invoked function.<p>
-     * <p>
-     * When the constructor varargs form is called or invoked while evaluating
-     * a <code>new</code> expression, <code>args</code> contains the
-     * arguments, <code>ctorObj</code> refers to this FunctionObject, and
-     * <code>inNewExpr</code> is true if and only if  a <code>new</code>
-     * expression caused the call. This supports defining a function that
-     * has different behavior when called as a constructor than when
-     * invoked as a normal function call. (For example, the Boolean
-     * constructor, when called as a function,
-     * will convert to boolean rather than creating a new object.)<p>
      *
-     * @param name                the name of the function
-     * @param methodOrConstructor a java.lang.reflect.Method or a java.lang.reflect.Constructor
-     *                            that defines the object
-     * @param scope               enclosing scope of function
+     * and an Object result.
+     *
+     * <p>When the function varargs form is called as part of a function call, the <code>args</code>
+     * parameter contains the arguments, with <code>thisObj</code> set to the JavaScript 'this'
+     * value. <code>funObj</code> is the function object for the invoked function.
+     *
+     * <p>When the constructor varargs form is called or invoked while evaluating a <code>new</code>
+     * expression, <code>args</code> contains the arguments, <code>ctorObj</code> refers to this
+     * FunctionObject, and <code>inNewExpr</code> is true if and only if a <code>new</code>
+     * expression caused the call. This supports defining a function that has different behavior
+     * when called as a constructor than when invoked as a normal function call. (For example, the
+     * Boolean constructor, when called as a function, will convert to boolean rather than creating
+     * a new object.)
+     *
+     * <p>
+     *
+     * @param name the name of the function
+     * @param methodOrConstructor a java.lang.reflect.Method or a java.lang.reflect.Constructor that
+     *     defines the object
+     * @param scope enclosing scope of function
      * @see org.mozilla.javascript.Scriptable
      */
-    public FunctionObject(String name, Member methodOrConstructor,
-                          Scriptable scope) {
+    public FunctionObject(String name, Member methodOrConstructor, Scriptable scope) {
         if (methodOrConstructor instanceof Constructor) {
             member = new MemberBox((Constructor<?>) methodOrConstructor);
             isStatic = true; // well, doesn't take a 'this'
@@ -98,23 +94,21 @@ public class FunctionObject extends BaseFunction {
         if (arity == 4 && (types[1].isArray() || types[2].isArray())) {
             // Either variable args or an error.
             if (types[1].isArray()) {
-                if (!isStatic ||
-                        types[0] != ScriptRuntime.ContextClass ||
-                        types[1].getComponentType() != ScriptRuntime.ObjectClass ||
-                        types[2] != ScriptRuntime.FunctionClass ||
-                        types[3] != Boolean.TYPE) {
-                    throw Context.reportRuntimeError1(
-                            "msg.varargs.ctor", methodName);
+                if (!isStatic
+                        || types[0] != ScriptRuntime.ContextClass
+                        || types[1].getComponentType() != ScriptRuntime.ObjectClass
+                        || types[2] != ScriptRuntime.FunctionClass
+                        || types[3] != Boolean.TYPE) {
+                    throw Context.reportRuntimeErrorById("msg.varargs.ctor", methodName);
                 }
                 parmsLength = VARARGS_CTOR;
             } else {
-                if (!isStatic ||
-                        types[0] != ScriptRuntime.ContextClass ||
-                        types[1] != ScriptRuntime.ScriptableClass ||
-                        types[2].getComponentType() != ScriptRuntime.ObjectClass ||
-                        types[3] != ScriptRuntime.FunctionClass) {
-                    throw Context.reportRuntimeError1(
-                            "msg.varargs.fun", methodName);
+                if (!isStatic
+                        || types[0] != ScriptRuntime.ContextClass
+                        || types[1] != ScriptRuntime.ScriptableClass
+                        || types[2].getComponentType() != ScriptRuntime.ObjectClass
+                        || types[3] != ScriptRuntime.FunctionClass) {
+                    throw Context.reportRuntimeErrorById("msg.varargs.fun", methodName);
                 }
                 parmsLength = VARARGS_METHOD;
             }
@@ -125,7 +119,7 @@ public class FunctionObject extends BaseFunction {
                 for (int i = 0; i != arity; ++i) {
                     int tag = getTypeTag(types[i]);
                     if (tag == JAVA_UNSUPPORTED_TYPE) {
-                        throw Context.reportRuntimeError2(
+                        throw Context.reportRuntimeErrorById(
                                 "msg.bad.parms", types[i].getName(), methodName);
                     }
                     typeTags[i] = (byte) tag;
@@ -144,32 +138,24 @@ public class FunctionObject extends BaseFunction {
         } else {
             Class<?> ctorType = member.getDeclaringClass();
             if (!ScriptRuntime.ScriptableClass.isAssignableFrom(ctorType)) {
-                throw Context.reportRuntimeError1(
-                        "msg.bad.ctor.return", ctorType.getName());
+                throw Context.reportRuntimeErrorById("msg.bad.ctor.return", ctorType.getName());
             }
         }
 
-        ScriptRuntime.setFunctionProtoAndParent(this, scope);
+        ScriptRuntime.setFunctionProtoAndParent(this, Context.getCurrentContext(), scope, false);
     }
 
     /**
-     * @return One of <code>JAVA_*_TYPE</code> constants to indicate desired type
-     * or {@link #JAVA_UNSUPPORTED_TYPE} if the convertion is not
-     * possible
+     * @return One of <code>JAVA_*_TYPE</code> constants to indicate desired type or {@link
+     *     #JAVA_UNSUPPORTED_TYPE} if the convertion is not possible
      */
     public static int getTypeTag(Class<?> type) {
-        if (type == ScriptRuntime.StringClass)
-            return JAVA_STRING_TYPE;
-        if (type == ScriptRuntime.IntegerClass || type == Integer.TYPE)
-            return JAVA_INT_TYPE;
-        if (type == ScriptRuntime.BooleanClass || type == Boolean.TYPE)
-            return JAVA_BOOLEAN_TYPE;
-        if (type == ScriptRuntime.DoubleClass || type == Double.TYPE)
-            return JAVA_DOUBLE_TYPE;
-        if (ScriptRuntime.ScriptableClass.isAssignableFrom(type))
-            return JAVA_SCRIPTABLE_TYPE;
-        if (type == ScriptRuntime.ObjectClass)
-            return JAVA_OBJECT_TYPE;
+        if (type == ScriptRuntime.StringClass) return JAVA_STRING_TYPE;
+        if (type == ScriptRuntime.IntegerClass || type == Integer.TYPE) return JAVA_INT_TYPE;
+        if (type == ScriptRuntime.BooleanClass || type == Boolean.TYPE) return JAVA_BOOLEAN_TYPE;
+        if (type == ScriptRuntime.DoubleClass || type == Double.TYPE) return JAVA_DOUBLE_TYPE;
+        if (ScriptRuntime.ScriptableClass.isAssignableFrom(type)) return JAVA_SCRIPTABLE_TYPE;
+        if (type == ScriptRuntime.ObjectClass) return JAVA_OBJECT_TYPE;
 
         // Note that the long type is not supported; see the javadoc for
         // the constructor for this class
@@ -177,29 +163,24 @@ public class FunctionObject extends BaseFunction {
         return JAVA_UNSUPPORTED_TYPE;
     }
 
-    public static Object convertArg(Context cx, Scriptable scope,
-                                    Object arg, int typeTag) {
+    public static Object convertArg(Context cx, Scriptable scope, Object arg, int typeTag) {
         switch (typeTag) {
             case JAVA_STRING_TYPE:
-                if (arg instanceof String)
-                    return arg;
+                if (arg instanceof String) return arg;
                 return ScriptRuntime.toString(arg);
             case JAVA_INT_TYPE:
-                if (arg instanceof Integer)
-                    return arg;
+                if (arg instanceof Integer) return arg;
                 return Integer.valueOf(ScriptRuntime.toInt32(arg));
             case JAVA_BOOLEAN_TYPE:
-                if (arg instanceof Boolean)
-                    return arg;
-                return ScriptRuntime.toBoolean(arg) ? Boolean.TRUE
-                        : Boolean.FALSE;
+                if (arg instanceof Boolean) return arg;
+                return ScriptRuntime.toBoolean(arg) ? Boolean.TRUE : Boolean.FALSE;
             case JAVA_DOUBLE_TYPE:
-                if (arg instanceof Double)
-                    return arg;
+                if (arg instanceof Double) return arg;
                 return Double.valueOf(ScriptRuntime.toNumber(arg));
             case JAVA_SCRIPTABLE_TYPE:
                 return ScriptRuntime.toObjectOrNull(cx, arg, scope);
             case JAVA_OBJECT_TYPE:
+                if (arg instanceof ConsString) return arg.toString();
                 return arg;
             default:
                 throw new IllegalArgumentException();
@@ -207,18 +188,15 @@ public class FunctionObject extends BaseFunction {
     }
 
     /**
-     * Return the value defined by  the method used to construct the object
-     * (number of parameters of the method, or 1 if the method is a "varargs"
-     * form).
+     * Return the value defined by the method used to construct the object (number of parameters of
+     * the method, or 1 if the method is a "varargs" form).
      */
     @Override
     public int getArity() {
         return parmsLength < 0 ? 1 : parmsLength;
     }
 
-    /**
-     * Return the same value as {@link #getArity()}.
-     */
+    /** Return the same value as {@link #getArity()}. */
     @Override
     public int getLength() {
         return getArity();
@@ -229,9 +207,7 @@ public class FunctionObject extends BaseFunction {
         return (functionName == null) ? "" : functionName;
     }
 
-    /**
-     * Get Java method or constructor this function represent.
-     */
+    /** Get Java method or constructor this function represent. */
     public Member getMethodOrConstructor() {
         if (member.isMethod()) {
             return member.method();
@@ -246,9 +222,8 @@ public class FunctionObject extends BaseFunction {
             Method method = methods[i];
             if (method != null && name.equals(method.getName())) {
                 if (found != null) {
-                    throw Context.reportRuntimeError2(
-                            "msg.no.overload", name,
-                            method.getDeclaringClass().getName());
+                    throw Context.reportRuntimeErrorById(
+                            "msg.no.overload", name, method.getDeclaringClass().getName());
                 }
                 found = method;
             }
@@ -257,8 +232,7 @@ public class FunctionObject extends BaseFunction {
     }
 
     /**
-     * Returns all public methods declared by the specified class. This excludes
-     * inherited methods.
+     * Returns all public methods declared by the specified class. This excludes inherited methods.
      *
      * @param clazz the class from which to pull public declared methods
      * @return the public methods declared in the specified class
@@ -269,8 +243,7 @@ public class FunctionObject extends BaseFunction {
         try {
             // getDeclaredMethods may be rejected by the security manager
             // but getMethods is more expensive
-            if (!sawSecurityException)
-                methods = clazz.getDeclaredMethods();
+            if (!sawSecurityException) methods = clazz.getDeclaredMethods();
         } catch (SecurityException e) {
             // If we get an exception once, give up on getDeclaredMethods
             sawSecurityException = true;
@@ -290,88 +263,97 @@ public class FunctionObject extends BaseFunction {
         }
         Method[] result = new Method[count];
         int j = 0;
-        for (int i = 0; i < methods.length; i++) {
-            if (methods[i] != null)
-                result[j++] = methods[i];
+        for (Method method : methods) {
+            if (method != null) result[j++] = method;
         }
         return result;
     }
 
     /**
      * Define this function as a JavaScript constructor.
-     * <p>
-     * Sets up the "prototype" and "constructor" properties. Also
-     * calls setParent and setPrototype with appropriate values.
-     * Then adds the function object as a property of the given scope, using
-     * <code>prototype.getClassName()</code>
-     * as the name of the property.
      *
-     * @param scope     the scope in which to define the constructor (typically
-     *                  the global object)
+     * <p>Sets up the "prototype" and "constructor" properties. Also calls setParent and
+     * setPrototype with appropriate values. Then adds the function object as a property of the
+     * given scope, using <code>prototype.getClassName()</code> as the name of the property.
+     *
+     * @param scope the scope in which to define the constructor (typically the global object)
      * @param prototype the prototype object
      * @see org.mozilla.javascript.Scriptable#setParentScope
      * @see org.mozilla.javascript.Scriptable#setPrototype
      * @see org.mozilla.javascript.Scriptable#getClassName
      */
     public void addAsConstructor(Scriptable scope, Scriptable prototype) {
-        initAsConstructor(scope, prototype);
-        defineProperty(scope, prototype.getClassName(),
-                this, ScriptableObject.NOT_ENUMERABLE);
+        initAsConstructor(
+                scope,
+                prototype,
+                ScriptableObject.DONTENUM | ScriptableObject.PERMANENT | ScriptableObject.READONLY);
+        defineProperty(scope, prototype.getClassName(), this, ScriptableObject.DONTENUM);
     }
 
-    void initAsConstructor(Scriptable scope, Scriptable prototype) {
-        ScriptRuntime.setFunctionProtoAndParent(this, scope);
+    /**
+     * Define this function as a JavaScript constructor.
+     *
+     * <p>Sets up the "prototype" and "constructor" properties. Also calls setParent and
+     * setPrototype with appropriate values. Then adds the function object as a property of the
+     * given scope, using <code>prototype.getClassName()</code> as the name of the property.
+     *
+     * @param scope the scope in which to define the constructor (typically the global object)
+     * @param prototype the prototype object
+     * @param attributes the attributes of the constructor property
+     * @see org.mozilla.javascript.Scriptable#setParentScope
+     * @see org.mozilla.javascript.Scriptable#setPrototype
+     * @see org.mozilla.javascript.Scriptable#getClassName
+     */
+    public void addAsConstructor(Scriptable scope, Scriptable prototype, int attributes) {
+        initAsConstructor(scope, prototype, attributes);
+        defineProperty(scope, prototype.getClassName(), this, ScriptableObject.DONTENUM);
+    }
+
+    void initAsConstructor(Scriptable scope, Scriptable prototype, int attributes) {
+        ScriptRuntime.setFunctionProtoAndParent(this, Context.getCurrentContext(), scope);
         setImmunePrototypeProperty(prototype);
 
         prototype.setParentScope(this);
 
-        defineProperty(prototype, "constructor", this,
-                ScriptableObject.NOT_ENUMERABLE |
-                        ScriptableObject.NOT_CONFIGURABLE |
-                        ScriptableObject.NOT_WRITABLE);
+        defineProperty(prototype, "constructor", this, attributes);
         setParentScope(scope);
     }
 
     /**
-     * @deprecated Use {@link #getTypeTag(Class)}
-     * and {@link #convertArg(Context, Scriptable, Object, int)}
-     * for type conversion.
+     * @deprecated Use {@link #getTypeTag(Class)} and {@link #convertArg(Context, Scriptable,
+     *     Object, int)} for type conversion.
      */
     @Deprecated
-    public static Object convertArg(Context cx, Scriptable scope,
-                                    Object arg, Class<?> desired) {
+    public static Object convertArg(Context cx, Scriptable scope, Object arg, Class<?> desired) {
         int tag = getTypeTag(desired);
         if (tag == JAVA_UNSUPPORTED_TYPE) {
-            throw Context.reportRuntimeError1
-                    ("msg.cant.convert", desired.getName());
+            throw Context.reportRuntimeErrorById("msg.cant.convert", desired.getName());
         }
         return convertArg(cx, scope, arg, tag);
     }
 
     /**
-     * Performs conversions on argument types if needed and
-     * invokes the underlying Java method or constructor.
-     * <p>
-     * Implements Function.call.
+     * Performs conversions on argument types if needed and invokes the underlying Java method or
+     * constructor.
      *
-     * @see org.mozilla.javascript.Function#call(
-     *Context, Scriptable, Scriptable, Object[])
+     * <p>Implements Function.call.
+     *
+     * @see org.mozilla.javascript.Function#call( Context, Scriptable, Scriptable, Object[])
      */
     @Override
-    public Object call(Context cx, Scriptable scope, Scriptable thisObj,
-                       Object[] args) {
+    public Object call(Context cx, Scriptable scope, Scriptable thisObj, Object[] args) {
         Object result;
         boolean checkMethodResult = false;
         int argsLength = args.length;
 
-        for (int i = 0; i < argsLength; i++) {
-            // flatten cons-strings before passing them as arguments
-            if (args[i] instanceof ConsString) {
-                args[i] = args[i].toString();
-            }
-        }
-
         if (parmsLength < 0) {
+            for (int i = 0; i < argsLength; i++) {
+                // flatten cons-strings before passing them as arguments
+                if (args[i] instanceof ConsString) {
+                    args[i] = args[i].toString();
+                }
+            }
+
             if (parmsLength == VARARGS_METHOD) {
                 Object[] invokeArgs = {cx, thisObj, args, this};
                 result = member.invoke(null, invokeArgs);
@@ -380,17 +362,21 @@ public class FunctionObject extends BaseFunction {
                 boolean inNewExpr = (thisObj == null);
                 Boolean b = inNewExpr ? Boolean.TRUE : Boolean.FALSE;
                 Object[] invokeArgs = {cx, args, this, b};
-                result = (member.isCtor())
-                        ? member.newInstance(invokeArgs)
-                        : member.invoke(null, invokeArgs);
+                result =
+                        (member.isCtor())
+                                ? member.newInstance(invokeArgs)
+                                : member.invoke(null, invokeArgs);
             }
 
         } else {
             if (!isStatic) {
                 Class<?> clazz = member.getDeclaringClass();
+                if (thisObj instanceof Delegator) {
+                    thisObj = ((Delegator) thisObj).getDelegee();
+                }
                 if (!clazz.isInstance(thisObj)) {
                     boolean compatible = false;
-                    if (thisObj == scope) {
+                    if (thisObj == scope || thisObj instanceof ModuleScope) {
                         Scriptable parentScope = getParentScope();
                         if (scope != parentScope) {
                             // Call with dynamic scope for standalone function,
@@ -403,8 +389,7 @@ public class FunctionObject extends BaseFunction {
                     }
                     if (!compatible) {
                         // Couldn't find an object to call this on.
-                        throw ScriptRuntime.typeError1("msg.incompat.call",
-                                functionName);
+                        throw ScriptRuntime.typeErrorById("msg.incompat.call", functionName);
                     }
                 }
             }
@@ -429,9 +414,7 @@ public class FunctionObject extends BaseFunction {
             } else {
                 invokeArgs = new Object[parmsLength];
                 for (int i = 0; i != parmsLength; ++i) {
-                    Object arg = (i < argsLength)
-                            ? args[i]
-                            : Undefined.instance;
+                    Object arg = (i < argsLength) ? args[i] : Undefined.instance;
                     invokeArgs[i] = convertArg(cx, scope, arg, typeTags[i]);
                 }
             }
@@ -442,7 +425,6 @@ public class FunctionObject extends BaseFunction {
             } else {
                 result = member.newInstance(invokeArgs);
             }
-
         }
 
         if (checkMethodResult) {
@@ -461,9 +443,8 @@ public class FunctionObject extends BaseFunction {
     }
 
     /**
-     * Return new {@link Scriptable} instance using the default
-     * constructor for the class of the underlying Java method.
-     * Return null to indicate that the call method should be used to create
+     * Return new {@link Scriptable} instance using the default constructor for the class of the
+     * underlying Java method. Return null to indicate that the call method should be used to create
      * new objects.
      */
     @Override
@@ -473,7 +454,7 @@ public class FunctionObject extends BaseFunction {
         }
         Scriptable result;
         try {
-            result = (Scriptable) member.getDeclaringClass().newInstance();
+            result = (Scriptable) member.getDeclaringClass().getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw Context.throwAsScriptRuntimeEx(ex);
         }
@@ -491,8 +472,7 @@ public class FunctionObject extends BaseFunction {
         return parmsLength == VARARGS_CTOR;
     }
 
-    private void readObject(ObjectInputStream in)
-            throws IOException, ClassNotFoundException {
+    private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
         in.defaultReadObject();
         if (parmsLength > 0) {
             Class<?>[] types = member.argTypes;
